syntax = "proto3";

option java_package = "io.grpc.verify.permissions";
option java_outer_classname = "VerifyPermissionsProto";
option objc_class_prefix = "VFY";

package verify;

message VerifyRequest {
    string token = 1;
    string refreshToken = 2;
    string method = 3;
    string baseUrl = 4;
}

message VerifyResponse {
    bool autorizationResponse = 1;
    string errorMessage = 2;
    string errorStatus = 3;
}

service VerifyPermissions {
    rpc Autorization (VerifyRequest) returns (VerifyResponse) {
    }
}